--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "real time chat app with socket.io + vue.js",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,5 +12,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "socket.io": "^2.1.0"
+  },
+  "engines": {
+    "node" : "8.9.4"
   }
 }
